[gd_scene load_steps=4 format=3 uid="uid://daff3mjw10ia4"]

[ext_resource type="PackedScene" uid="uid://xd74vrulagn4" path="res://scenes/maze_scene/small_door/door_tooth.tscn" id="1_gracy"]
[ext_resource type="Script" uid="uid://dn037837joq0q" path="res://scenes/maze_scene/small_door/rotating_door.gd" id="1_jareo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jareo"]
size = Vector3(3.1293945, 1.5662842, 0.38720703)

[node name="RotatingDoor" type="Node3D"]
script = ExtResource("1_jareo")

[node name="TeethContainer" type="Node3D" parent="."]

[node name="DoorTooth4" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(7.7860433e-16, 4.371139e-08, 0.5, 0.4075, -4.371139e-08, 0, 1.7812392e-08, 1, -2.1855694e-08, 1.276, 0.72, -0.013)

[node name="DoorTooth9" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(5.254385e-16, 3.4969112e-08, 1, 0.275, -3.4969112e-08, 0, 1.2020632e-08, 0.8, -4.371139e-08, 1.2747283, -0.07340945, -0.0025208304)

[node name="DoorTooth10" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, 3.5624783e-08, 1, 1, -3.5624783e-08, 0, 4.371139e-08, 0.815, -4.371139e-08, 1.276, 0.5422636, -0.006)

[node name="DoorTooth11" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(7.7860433e-16, 4.371139e-08, 0.5, 0.4075, -4.371139e-08, 0, 1.7812392e-08, 1, -2.1855694e-08, 1.276, 0.356, 0)

[node name="DoorTooth12" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, 3.5624783e-08, 1, 1, -3.5624783e-08, 0, 4.371139e-08, 0.815, -4.371139e-08, 1.276, 0.18486863, -0.002)

[node name="DoorTooth13" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(7.7860433e-16, 4.371139e-08, 0.5, 0.4075, -4.371139e-08, 0, 1.7812392e-08, 1, -2.1855694e-08, 1.276, 1.083, -0.001)

[node name="DoorTooth14" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, 3.5624783e-08, 1, 1, -3.5624783e-08, 0, 4.371139e-08, 0.815, -4.371139e-08, 1.276, 0.8939546, 0)

[node name="DoorTooth2" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(9.553427e-16, -4.371139e-08, -0.5, -0.5, -4.371139e-08, 0, -2.1855694e-08, 1, -2.1855694e-08, -1.434, 0.187, -0.013)

[node name="DoorTooth" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, -3.4969112e-08, -1, -1, -3.4969112e-08, 0, -4.371139e-08, 0.8, -4.371139e-08, -1.4335154, 0, 0)

[node name="DoorTooth3" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, -3.5624783e-08, -1, -1, -3.5624783e-08, 0, -4.371139e-08, 0.815, -4.371139e-08, -1.4335154, 0.35963532, 0)

[node name="DoorTooth5" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(9.553427e-16, -4.371139e-08, -0.5, -0.5, -4.371139e-08, 0, -2.1855694e-08, 1, -2.1855694e-08, -1.4335154, 0.5470098, 0)

[node name="DoorTooth6" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, -3.5624783e-08, -1, -1, -3.5624783e-08, 0, -4.371139e-08, 0.815, -4.371139e-08, -1.434, 0.718, -0.002)

[node name="DoorTooth7" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(9.553427e-16, -4.371139e-08, -0.5, -0.5, -4.371139e-08, 0, -2.1855694e-08, 1, -2.1855694e-08, -1.4335154, 0.9029975, 0)

[node name="DoorTooth8" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(1.9106855e-15, -3.5624783e-08, -1, -1, -3.5624783e-08, 0, -4.371139e-08, 0.815, -4.371139e-08, -1.4335154, 1.0809023, 0)

[node name="DoorTooth15" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(7.7860433e-16, 4.371139e-08, 0.5, 0.4075, -4.371139e-08, 0, 1.7812392e-08, 1, -2.1855694e-08, 1.2761505, 0.0072083846, -0.00064492226)

[node name="DoorTooth16" parent="TeethContainer" instance=ExtResource("1_gracy")]
transform = Transform3D(5.254385e-16, 3.4969112e-08, 1, 0.275, -3.4969112e-08, 0, 1.2020632e-08, 0.8, -4.371139e-08, 1.2747283, 1.150389, -0.0025208304)

[node name="ClosedCollision" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClosedCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.030517578, 0.7147827, -0.044677734)
shape = SubResource("BoxShape3D_jareo")
